--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
 
         <div class="row">
           <div class="col-sm" style="color: black;">
-                This is an Online Image Filter tool! Allows for users to upload an image and select any kind of filters from the Basic and Advanced Filters Dropdowns. 
-                You can view the image with the filters applied simultaneously and can also download the image!
+                This is an Online Image Filter tool! Allows for users to upload an image and select any kind of filters from the Basic and Advanced Options. 
+                You can view and download the image with the filter applied!
           </div>
           <div class="col-sm">
             <h2 style="font-family: 'Josefin Sans', sans-serif;">Upload an Image!</h2>
