user session handeled

--- a/templates/output.html
+++ b/templates/output.html
@@ -48,7 +48,7 @@
        $(document).ready(function(){
 		    imagebox = $('#imagebox')
         console.log("test",'{{token}}')
-        var data = 0
+        var data = '{{token}}'
 			$.ajax({
 				url: "/filterImage", // fix this to your liking
 				type:"POST",
